--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0"
